master Update struture
-

Signed-off-by: Livia Vasconcelos <ltenoriovasconcelos@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
 
     <string name="price">Price</string>
     <string name="date">Delivery at:</string>
+
+    <string name="deliverydate">3 hours</string>
 </resources>
