--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -13,4 +13,6 @@
 
     <string name="price">Preço: </string>
     <string name="date">Entrega as:</string>
+
+    <string name="deliverydate">3 horas</string>
 </resources>
